[package]
name = "conduwuit_router"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
brotli_compression = [
	"conduwuit-admin/brotli_compression",
	"conduwuit-api/brotli_compression",
	"conduwuit-core/brotli_compression",
	"conduwuit-service/brotli_compression",
	"tower-http/compression-br",
]
direct_tls = [
	"axum-server/tls-rustls",
	"dep:rustls",
	"dep:axum-server-dual-protocol",
]
gzip_compression = [
	"conduwuit-admin/gzip_compression",
	"conduwuit-api/gzip_compression",
	"conduwuit-core/gzip_compression",
	"conduwuit-service/gzip_compression",
	"tower-http/compression-gzip",
]
io_uring = [
	"conduwuit-admin/io_uring",
	"conduwuit-api/io_uring",
	"conduwuit-service/io_uring",
	"conduwuit-api/io_uring",
]
jemalloc = [
	"conduwuit-admin/jemalloc",
	"conduwuit-api/jemalloc",
	"conduwuit-core/jemalloc",
	"conduwuit-service/jemalloc",
]
jemalloc_conf = [
	"conduwuit-admin/jemalloc_conf",
	"conduwuit-api/jemalloc_conf",
	"conduwuit-core/jemalloc_conf",
	"conduwuit-service/jemalloc_conf",
]
jemalloc_prof = [
	"conduwuit-admin/jemalloc_prof",
	"conduwuit-api/jemalloc_prof",
	"conduwuit-core/jemalloc_prof",
	"conduwuit-service/jemalloc_prof",
]
jemalloc_stats = [
	"conduwuit-admin/jemalloc_stats",
	"conduwuit-api/jemalloc_stats",
	"conduwuit-core/jemalloc_stats",
	"conduwuit-service/jemalloc_stats",
]
release_max_log_level = [
	"conduwuit-admin/release_max_log_level",
	"conduwuit-api/release_max_log_level",
	"conduwuit-core/release_max_log_level",
	"conduwuit-service/release_max_log_level",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
]
sentry_telemetry = [
	"conduwuit-core/sentry_telemetry",
	"dep:sentry",
	"dep:sentry-tracing",
	"dep:sentry-tower",
]
systemd = [
	"dep:sd-notify",
]
zstd_compression = [
	"conduwuit-api/zstd_compression",
	"conduwuit-core/zstd_compression",
	"conduwuit-service/zstd_compression",
	"tower-http/compression-zstd",
]

[dependencies]
axum-client-ip.workspace = true
axum-server-dual-protocol.workspace = true
axum-server-dual-protocol.optional = true
axum-server.workspace = true
axum.workspace = true
bytes.workspace = true
conduwuit-admin.workspace = true
conduwuit-api.workspace = true
conduwuit-core.workspace = true
conduwuit-service.workspace = true
const-str.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
log.workspace = true
ruma.workspace = true
rustls.workspace = true
rustls.optional = true
sentry.optional = true
sentry-tower.optional = true
sentry-tower.workspace = true
sentry-tracing.optional = true
sentry-tracing.workspace = true
sentry.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[target.'cfg(all(unix, target_os = "linux"))'.dependencies]
sd-notify.workspace = true
sd-notify.optional = true

[lints]
workspace = true
