[package]
name = "tuwunel_service"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
blurhashing = [
	"dep:image",
	"dep:blurhash",
]
brotli_compression = [
	"tuwunel-core/brotli_compression",
	"reqwest/brotli",
]
console = [
	"dep:rustyline-async",
	"dep:termimad",
]
element_hacks = []
gzip_compression = [
	"tuwunel-core/gzip_compression",
	"reqwest/gzip",
]
io_uring = [
	"tuwunel-database/io_uring",
]
jemalloc = [
	"tuwunel-core/jemalloc",
	"tuwunel-database/jemalloc",
]
jemalloc_conf = [
	"tuwunel-core/jemalloc_conf",
	"tuwunel-database/jemalloc_conf",
]
jemalloc_prof = [
	"tuwunel-core/jemalloc_prof",
	"tuwunel-database/jemalloc_prof",
]
jemalloc_stats = [
	"tuwunel-core/jemalloc_stats",
	"tuwunel-database/jemalloc_stats",
]
media_thumbnail = [
	"dep:image",
]
release_max_log_level = [
	"tuwunel-core/release_max_log_level",
	"tuwunel-database/release_max_log_level",
	"log/max_level_trace",
	"log/release_max_level_info",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
]
url_preview = [
	"dep:image",
	"dep:webpage",
]
zstd_compression = [
	"tuwunel-core/zstd_compression",
	"tuwunel-database/zstd_compression",
    "reqwest/zstd",
]

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
const-str.workspace = true
either.workspace = true
futures.workspace = true
hickory-resolver.workspace = true
http.workspace = true
image.workspace = true
image.optional = true
ipaddress.workspace = true
itertools.workspace = true
ldap3.workspace = true
log.workspace = true
loole.workspace = true
lru-cache.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
ruma.workspace = true
rustyline-async.workspace = true
rustyline-async.optional = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
termimad.workspace = true
termimad.optional = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
webpage.workspace = true
webpage.optional = true
blurhash.workspace = true
blurhash.optional = true
tuwunel-core.workspace = true
tuwunel-database.workspace = true

[lints]
workspace = true
